[tool.poetry]
name = "marketdata"
version = "0.1.0"
description = ""
authors = ["ghstco <steven@gh-st.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.41.1"
polygon-api-client = "1.14.2"
pandas = "2.2.3"
plotly-express = "0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
